<resources>
    <string name="app_name">Github User</string>
    <string name="splash_title">Github User</string>
    <string name="name_user">Username</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="full_name">Full Name</string>
    <string name="username">anonymous12</string>
    <string name="_10">10</string>
    <string name="repositories">repositories</string>
    <string name="followers">follower(s)</string>
    <string name="following">following</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="location_desc">Nowhere area of Indonesia</string>
    <string name="location">Location</string>
    <string name="company_desc">Nobody Corp</string>
    <string name="company">Company</string>
    <string name="close_menu">Close the app</string>
    <string name="search_user_title">Search User</string>
    <string name="user_id">User Id: %1$s</string>
    <string name="search_guide">Enter username of the user you are looking for in searchbar above!</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="open_settings">Settings</string>
    <string name="main_label">Github User\'s Search</string>
    <string name="detail_label">Detail User</string>
    <string name="favorite_label">Favorite Users</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="snackbar_added_message">%1$s is added to favorite users!</string>
    <string name="snackbar_deleted_message">%1$s is deleted from favorite users!</string>
    <string name="empty_favorite">There is no any favorite user right now!</string>
    <string name="add_failed">Cannot add data</string>
    <string name="delete_failed">Cannot delete data</string>
    <string name="reminder_text">Reminder at 9:00 AM</string>
    <string name="reminder_key">Reminder</string>
    <string name="current_language">English</string>
    <string name="language_key">language</string>
    <string name="language_text">Select Language</string>
    <string name="notif_message">Let\'s find popular user on Github!</string>
    <string name="alarmset_message">Reminder at 9:00 AM set up</string>
    <string name="alarmcanceled_message">Reminder at 9:00 AM has canceled</string>
    <string name="appwidget_text">GITHUB FAV USERS</string>
    <string name="empty_text">NO DATA</string>
    <string name="add_widget">Add widget</string>
    <string name="fab_contentdesc">Favorite Button</string>
</resources>